dfir_rs/tests/compile-fail-stable/surface_port_naked_overwrite_knot_b_out.rs
../compile-fail/surface_port_naked_overwrite_knot_b_out.rs